--- a/kripto.env
+++ b/kripto.env
@@ -1,5 +1,3 @@
-IMAGE=ffhenkes/kripto
-TAG=latest
-NAME=kripto
-HOST_VOLUME=/data/secrets
-KRIPTO_ADDRESS=:20800
+KRIPTO_ADDRESS=:20443
+CRT_PATH=kripto-ssl.crt
+KEY_PATH=kripto-ssl.key
