[ADD] Using gometalinter with golint and megacheck. Also fixes based on hints. Closes #5 Closes #6

--- a/docker.env
+++ b/docker.env
@@ -3,3 +3,4 @@ TAG=latest
 NAME=kripto
 SECRETS_VOLUME=/data/kripto/secrets
 AUTH_VOLUME=/data/kripto/authdb
+LINT=github.com/alecthomas/gometalinter
