[CHANGE] Encryption key is now injected in build time. Closes #11

--- a/cmd/kclient/Makefile
+++ b/cmd/kclient/Makefile
@@ -1,6 +1,8 @@
 include kclient.env
 export $(shell sed 's/=.*//' kclient.env)
 
+PHRASE := $(if $(PHRASE),$(PHRASE),$(DEFAULT))
+
 all: build test
 
 build:
