--- a/cmd/kclient/kclient.env
+++ b/cmd/kclient/kclient.env
@@ -1,2 +1,2 @@
-PHRASE=avocado
-PACKAGE=CGO_ENABLED=0 go build -v -a -installsuffix cgo -o kripto
+DEFAULT=avocado
+PACKAGE=CGO_ENABLED=0 go build -v -a -installsuffix cgo -ldflags "-X main.Phrase=$(PHRASE)" -o kripto
