--- a/cmd/kserver/Makefile
+++ b/cmd/kserver/Makefile
@@ -1,6 +1,8 @@
 include kserver.env
 export $(shell sed 's/=.*//' kserver.env)
 
+PHRASE := $(if $(PHRASE),$(PHRASE),$(DEFAULT))
+
 all: build test
 
 build:
