--- a/cmd/kserver/kserver.env
+++ b/cmd/kserver/kserver.env
@@ -1,4 +1,5 @@
-PACKAGE=CGO_ENABLED=0 go build -v -a -installsuffix cgo -o kserver
+DEFAULT=avocado
+PACKAGE=CGO_ENABLED=0 go build -v -a -installsuffix cgo -ldflags "-X main.Phrase=$(PHRASE)" -o kserver
 KRIPTO_ADDRESS=:20443
 CRT_PATH=../../ssl/kripto-ssl.crt
 KEY_PATH=../../ssl/kripto-ssl.key
